* Spacing to details component for tablet * Action panel width fix

--- a/src/assets/scss/mts/modules/action-panel/_action-panel.scss
+++ b/src/assets/scss/mts/modules/action-panel/_action-panel.scss
@@ -1,7 +1,7 @@
-$buttonwidth: 180px;
+$buttonwidth: 188px;
 
 // Used in MOT test results and Site Review
-.action-panel { 
+.action-panel {
   &, * {
     box-sizing: border-box;
   }
